--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "sass ./theme/gnome-shell-dark.scss ./theme/gnome-shell-dark.css",
+    "build2": "gnome-shell-high-contrast.css - gnome-shell-light.css"
   },
   "author": "wfpaisa",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "sass": "^1.70.0"
+  }
 }
